--- a/website/newsletter/223/index.mdx
+++ b/website/newsletter/223/index.mdx
@@ -8,9 +8,7 @@ unlisted: true
 
 Hi everyone!
 
-🗓 [React-Summit](https://reactsummit.com/?utm_source=Newsletter&utm_medium=thisweekinreact) - 🇳🇱 Amsterdam - 13 & 17 June. CFP is closing soon on March 2! Last chance to submit your talks for a top-tier tech audience.
-
-🗓️ [App.js Conf](https://appjs.co/?utm_source=thisweekinreact) -  🇵🇱 Kraków - 28-30 May. Don't miss your chance to grab your tickets and benefit from an exclusive 15% discount using the code "TWIR".
+Strapi conf
 
 <Todo />
 
@@ -44,6 +42,7 @@ With 7 years in production and 1 million daily users, react-admin is a sure bet.
 - 💸 [AI coding benchmarks for backends](https://convex.link/thisweekbench)
 - 👀 [React Explorer \- Turns your React site into an interactive visualization](https://www.react-explorer.com/)
 - 📖 [Deno docs \- Build an app with Tanstack and Deno](https://docs.deno.com/examples/tanstack_tutorial/)
+- 🗓 [React-Summit](https://reactsummit.com/?utm_source=Newsletter&utm_medium=thisweekinreact) - 🇳🇱 Amsterdam - 13 & 17 June. CFP is closing soon on March 2! Last chance to submit your talks for a top-tier tech audience.
 - 📜 [How Preply improved INP on a Next.js application (without React Server Components and App Router)](https://medium.com/preply-engineering/how-preply-improved-inp-on-a-next-js-application-without-react-server-components-and-app-router-491713149875): A deep dive into this Core Web Vital metrics and various things Preply tried to improve it, using a data-driven approach.
 - 📜 [Avoiding Server Component Waterfall Fetching with React 19 cache()](https://aurorascharff.no/posts/avoiding-server-component-waterfall-fetching-with-react-19-cache/): You can use `React.cache()` to deduplicate requests and preload data as soon as possible to avoid request waterfalls. This works but creates an implicit coupling. I’d prefer a more explicit model, hoisting all requests and passing promises down as props.
 - 📜 [Armin's TanStack Router Notes](https://gist.github.com/mitsuhiko/555b45f020a8d7e389516b51f6d03534): Documents challenges encountered while trying to determine whether Sentry could adopt TanStack Router.
@@ -105,6 +104,7 @@ I can’t summarize the whole survey, but here are a few things I discovered:
 
 - 💸 [PostHog - How we built mobile replay (and why it took so long)](https://dub.link/twir-feb26)
 - 📜 [How to build Custom Tabs with Expo Router UI](https://expo.dev/blog/how-to-build-custom-tabs-with-expo-router-ui)
+- 🗓️ [App.js Conf](https://appjs.co/?utm_source=thisweekinreact) -  🇵🇱 Kraków - 28-30 May. Don't miss your chance to grab your tickets and benefit from an exclusive 15% discount using the code "TWIR".
 - 📦 [Nitro 0.23 \- Nitro Views](https://github.com/mrousavy/nitro/releases/tag/v0.23.0): A new convenient and perfomant way to integrate native Swift / Kotlin views into React Native apps. Requires 0.78+ and New Arch.
 - 📦 [Reanimated 3.17 \- Edge-to-Edge, LAB color space, animate `boxShadow`](https://github.com/software-mansion/react-native-reanimated/releases/tag/3.17.0): Support for RN 0.78 coming in 3.17.1 soon.
 - 📦 [React Native Boost \- A powerful Babel plugin that automatically optimizes React Native apps](https://github.com/kuatsu/react-native-boost): Apply safe AST micro-optimizations to boost performance, like using faster native Text/View components instead of the RN JS wrappers.
