--- a/website/newsletter/223/index.mdx
+++ b/website/newsletter/223/index.mdx
@@ -60,7 +60,7 @@ With 7 years in production and 1 million daily users, react-admin is a sure bet.
 - 📦 [React Scan Chrome Extension](https://github.com/jantimon/chrome-react-scan-inspector)
 - 📦 [Storybook 8.6 \- Storybook Test improvements](https://github.com/storybookjs/storybook/releases/tag/v8.6.0)
 - 📦 [React Admin 5.6 \- Black & white theme](https://github.com/marmelab/react-admin/releases/tag/v5.6.0)
-- 📦 [Bun 1.2.3](https://bun.sh/blog/bun-v1.2.3)
+- 📦 [Bun 1.2.3 - Built-in React support with hot-reloading, React init template](https://bun.sh/blog/bun-v1.2.3)
 - 🔨 [Laravel Starter Kits](https://laravel.com/starter-kits): Include a new official React 19 \+ Inertia 2 starter kit.
 - 🔨 [Remix Epic Stack update \- Passkeys, Helmets, and more\!](https://github.com/epicweb-dev/epic-stack/discussions/937)
 - 🎥 [Jack Herrington \- Fix Your Slow React App With React-Scan](https://www.youtube.com/watch?v=3EnathFYgz8)
@@ -89,7 +89,9 @@ This [post](https://www.meticulous.ai/blog/lessons-from-a-decade?utm_source=this
 
 ## 📱 React-Native {#react-native}
 
-[State of React Native 2024 \- Survey Results](https://results.stateofreactnative.com/)
+[![State of React Native 2024 - Survey Results](/emails/issues/223/state-of-rn.jpg)](https://results.stateofreactnative.com/)
+
+**[State of React Native 2024 \- Survey Results](https://results.stateofreactnative.com/)**
 
 The survey results are out and I’m super proud that among all the React Native resources, this newsletter got the highest positivity score. Thank you ❤️!
 
