--- a/website/newsletter/223/index.mdx
+++ b/website/newsletter/223/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /223
-title: "This Week In React #223: ..."
+title: "This Week In React #223: TanStack, React Router, React-Scan, Bun, Next.js, INP, Storybook | State of RN, Nitro Views, Reanimated, Gesture Handler, Screens, AWS-LC, QuickPush, Metro | TC39, CSS, TypeScript, Observables..."
 authors: [slorber]
 date: 02-26-2025
 unlisted: true
@@ -8,9 +8,15 @@ unlisted: true
 
 Hi everyone!
 
-Strapi conf
+This week we have:
 
-<Todo />
+- **React**: A good mix of content and many community articles, but no major announcements.
+- **React Native**: The 2024 survey results are out, infra libraries now support RN 0.78, and Nitro Views have been released!
+- **Other**: Several TC39 proposals are progressing—my favorites are `import defer` and `RegExp.escape()`.
+
+I'm trying something new, let me know if you like the intro to be split by section like above.
+
+Check our partner [StrapiConf](https://conf.strapi.io/?utm_source=thisweekinreact) - 🇫🇷 Paris - 13 May. Strapi is a popular headless CMS in the React ecosystem, and like me, it's French 🥐! Get a 10% discount with code "TWIR".
 
 <!-- truncate -->
 
@@ -41,7 +47,7 @@ With 7 years in production and 1 million daily users, react-admin is a sure bet.
 
 - 💸 [AI coding benchmarks for backends](https://convex.link/thisweekbench)
 - 👀 [React Explorer \- Turns your React site into an interactive visualization](https://www.react-explorer.com/)
-- 📖 [Deno docs \- Build an app with Tanstack and Deno](https://docs.deno.com/examples/tanstack_tutorial/)
+- 📖 [Deno docs \- Build an app with TanStack and Deno](https://docs.deno.com/examples/tanstack_tutorial/)
 - 🗓 [React-Summit](https://reactsummit.com/?utm_source=Newsletter&utm_medium=thisweekinreact) - 🇳🇱 Amsterdam - 13 & 17 June. CFP is closing soon on March 2! Last chance to submit your talks for a top-tier tech audience.
 - 📜 [How Preply improved INP on a Next.js application (without React Server Components and App Router)](https://medium.com/preply-engineering/how-preply-improved-inp-on-a-next-js-application-without-react-server-components-and-app-router-491713149875): A deep dive into this Core Web Vital metrics and various things Preply tried to improve it, using a data-driven approach.
 - 📜 [Avoiding Server Component Waterfall Fetching with React 19 cache()](https://aurorascharff.no/posts/avoiding-server-component-waterfall-fetching-with-react-19-cache/): You can use `React.cache()` to deduplicate requests and preload data as soon as possible to avoid request waterfalls. This works but creates an implicit coupling. I’d prefer a more explicit model, hoisting all requests and passing promises down as props.
