--- a/website/newsletter/224/index.mdx
+++ b/website/newsletter/224/index.mdx
@@ -108,9 +108,9 @@ Join Lazar from Sentry for a hands-on session where you’ll build it, break it,
 
 [Lynx: Unlock Native for More](https://lynxjs.org/blog/lynx-unlock-native-for-more)
 
-ByteDance just announced Lynx, their native cross-platform technology. It’s used extensively in their production apps, including TikTok\! With first-class React bindings, it’s a serious competitor to React Native, and support for other frameworks is expected. The architectural choices are really interesting, with a dual-thread model and different runtimes. It has support for some CSS and Web APIs that even React Native still doesn’t have and uses convenient built-in JSX intrinsic elements like `<view>`.
+ByteDance just announced Lynx, their native cross-platform technology. It’s used extensively in their production apps, including TikTok\! With React bindings, it’s a serious competitor to React Native, and support for other frameworks is expected. The architectural choices are interesting, with a dual-thread model and different runtimes. It has support for some CSS and Web APIs that even React Native still doesn’t have and uses convenient built-in JSX intrinsic elements like `<view>`.
 
-The feature set at launch is impressive, but there are also some weird things (using React 17 / Preact, custom elements on the web). Time will tell whether the technology lives up to its promise and can truly compete with the established player. In any case, competition is healthy.
+The feature set at launch is impressive, but there are also some surprising things you might dislike, such as using React 17 / Preact, or custom elements on the web. Time will tell whether the technology lives up to its promise and can truly compete with the established player. In any case, competition is healthy.
 
 ---
 
