--- a/website/newsletter/225/index.mdx
+++ b/website/newsletter/225/index.mdx
@@ -43,6 +43,7 @@ CodeRabbit has so far reviewed more than 5 million PRs, installed on 1 million r
 <Todo />
 
 - 💸 [Product for Engineers - WTF is activation and why should engineers care?](https://dub.link/twir-mar12)
+- 💸 [VS Code extension: Visualize how and where components (and their props) are used](https://omlet.dev/?utm_campaign=partner_this-week-in-react_newsletter-quick-link-mar-2025)
 
 <SubscribeFormEmbed placement="middle" />
 
